Allow sync-confirmation WebUI to make network requests.

Bug: 829218
Change-Id: I4db1e432cbe32b6a0de5a502eba5acb1af3e16d0
Reviewed-on: https://chromium-review.googlesource.com/1005035
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: David Roger <droger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549541}
Former-commit-id: c1b313b3e5b79d17e0bf5963a7ddb22c92c16bc7